// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RatingBreakdown /> should correctly render percent recommended 1`] = `
<div
  className="card"
>
  <div
    className="card-title h5"
  >
    <div
      className="hstack gap-3"
    >
      <div
        className="average-review-header"
      >
        0.0
      </div>
      <span
        style={
          Object {
            "direction": "ltr",
            "display": "inline-block",
            "touchAction": "none",
          }
        }
      >
        <span
          aria-hidden="true"
          className="react-simple-star-rating"
          style={
            Object {
              "cursor": "",
              "display": "inline-block",
              "overflow": "hidden",
              "position": "relative",
              "userSelect": "none",
              "verticalAlign": "middle",
              "whiteSpace": "nowrap",
            }
          }
        >
          <span
            className="empty-icons"
            style={
              Object {
                "color": "#cccccc",
                "display": "inline-block",
              }
            }
          >
            <svg
              className="star-svg"
              fill="currentColor"
              height={35}
              style={Object {}}
              viewBox="0 0 24 24"
              width={35}
            >
              <path
                d="M12,17.27L18.18,21l-1.64-7.03L22,9.24l-7.19-0.61L12,2L9.19,8.63L2,9.24l5.46,4.73L5.82,21L12,17.27z"
                fill="currentColor"
                stroke="none"
                strokeMiterlimit="10"
                strokeWidth={0}
              />
            </svg>
            <svg
              className="star-svg"
              fill="currentColor"
              height={35}
              style={Object {}}
              viewBox="0 0 24 24"
              width={35}
            >
              <path
                d="M12,17.27L18.18,21l-1.64-7.03L22,9.24l-7.19-0.61L12,2L9.19,8.63L2,9.24l5.46,4.73L5.82,21L12,17.27z"
                fill="currentColor"
                stroke="none"
                strokeMiterlimit="10"
                strokeWidth={0}
              />
            </svg>
            <svg
              className="star-svg"
              fill="currentColor"
              height={35}
              style={Object {}}
              viewBox="0 0 24 24"
              width={35}
            >
              <path
                d="M12,17.27L18.18,21l-1.64-7.03L22,9.24l-7.19-0.61L12,2L9.19,8.63L2,9.24l5.46,4.73L5.82,21L12,17.27z"
                fill="currentColor"
                stroke="none"
                strokeMiterlimit="10"
                strokeWidth={0}
              />
            </svg>
            <svg
              className="star-svg"
              fill="currentColor"
              height={35}
              style={Object {}}
              viewBox="0 0 24 24"
              width={35}
            >
              <path
                d="M12,17.27L18.18,21l-1.64-7.03L22,9.24l-7.19-0.61L12,2L9.19,8.63L2,9.24l5.46,4.73L5.82,21L12,17.27z"
                fill="currentColor"
                stroke="none"
                strokeMiterlimit="10"
                strokeWidth={0}
              />
            </svg>
            <svg
              className="star-svg"
              fill="currentColor"
              height={35}
              style={Object {}}
              viewBox="0 0 24 24"
              width={35}
            >
              <path
                d="M12,17.27L18.18,21l-1.64-7.03L22,9.24l-7.19-0.61L12,2L9.19,8.63L2,9.24l5.46,4.73L5.82,21L12,17.27z"
                fill="currentColor"
                stroke="none"
                strokeMiterlimit="10"
                strokeWidth={0}
              />
            </svg>
          </span>
          <span
            className="filled-icons"
            style={
              Object {
                "color": "#ffbc0b",
                "display": "inline-block",
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "top": 0,
                "transition": "",
                "whiteSpace": "nowrap",
                "width": "0%",
              }
            }
            title="0 out of 5"
          >
            <svg
              className="star-svg"
              fill="currentColor"
              height={35}
              style={Object {}}
              viewBox="0 0 24 24"
              width={35}
            >
              <path
                d="M12,17.27L18.18,21l-1.64-7.03L22,9.24l-7.19-0.61L12,2L9.19,8.63L2,9.24l5.46,4.73L5.82,21L12,17.27z"
                fill="currentColor"
                stroke="none"
                strokeMiterlimit="10"
                strokeWidth={0}
              />
            </svg>
            <svg
              className="star-svg"
              fill="currentColor"
              height={35}
              style={Object {}}
              viewBox="0 0 24 24"
              width={35}
            >
              <path
                d="M12,17.27L18.18,21l-1.64-7.03L22,9.24l-7.19-0.61L12,2L9.19,8.63L2,9.24l5.46,4.73L5.82,21L12,17.27z"
                fill="currentColor"
                stroke="none"
                strokeMiterlimit="10"
                strokeWidth={0}
              />
            </svg>
            <svg
              className="star-svg"
              fill="currentColor"
              height={35}
              style={Object {}}
              viewBox="0 0 24 24"
              width={35}
            >
              <path
                d="M12,17.27L18.18,21l-1.64-7.03L22,9.24l-7.19-0.61L12,2L9.19,8.63L2,9.24l5.46,4.73L5.82,21L12,17.27z"
                fill="currentColor"
                stroke="none"
                strokeMiterlimit="10"
                strokeWidth={0}
              />
            </svg>
            <svg
              className="star-svg"
              fill="currentColor"
              height={35}
              style={Object {}}
              viewBox="0 0 24 24"
              width={35}
            >
              <path
                d="M12,17.27L18.18,21l-1.64-7.03L22,9.24l-7.19-0.61L12,2L9.19,8.63L2,9.24l5.46,4.73L5.82,21L12,17.27z"
                fill="currentColor"
                stroke="none"
                strokeMiterlimit="10"
                strokeWidth={0}
              />
            </svg>
            <svg
              className="star-svg"
              fill="currentColor"
              height={35}
              style={Object {}}
              viewBox="0 0 24 24"
              width={35}
            >
              <path
                d="M12,17.27L18.18,21l-1.64-7.03L22,9.24l-7.19-0.61L12,2L9.19,8.63L2,9.24l5.46,4.73L5.82,21L12,17.27z"
                fill="currentColor"
                stroke="none"
                strokeMiterlimit="10"
                strokeWidth={0}
              />
            </svg>
          </span>
        </span>
      </span>
    </div>
    <h5
      className="total-ratings-header"
    >
       ratings
    </h5>
  </div>
  <div
    className="card-body"
  >
    <div
      className="hstack gap-2"
    >
      <div
        className="percent-recommended"
      >
        %
      </div>
      of reviewers recommend this product
    </div>
    <br />
    <div
      className="vstack gap-2"
    >
      <div
        className="breakdowns"
      >
        <button
          className="btn btn-outline-secondary btn-sm"
          disabled={false}
          name="five"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          Five stars: 
          0
        </button>
      </div>
      <div
        className="progress"
      >
        <div
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={NaN}
          className="progress-bar bg-success"
          role="progressbar"
          style={
            Object {
              "width": "NaN%",
            }
          }
        />
      </div>
      <div
        className="breakdowns"
      >
        <button
          className="btn btn-outline-secondary btn-sm"
          disabled={false}
          name="four"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          Four stars: 
          0
        </button>
      </div>
      <div
        className="progress"
      >
        <div
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={NaN}
          className="progress-bar bg-success"
          role="progressbar"
          style={
            Object {
              "width": "NaN%",
            }
          }
        />
      </div>
      <div
        className="breakdowns"
      >
        <button
          className="btn btn-outline-secondary btn-sm"
          disabled={false}
          name="three"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          Three stars: 
          0
        </button>
      </div>
      <div
        className="progress"
      >
        <div
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={NaN}
          className="progress-bar bg-success"
          role="progressbar"
          style={
            Object {
              "width": "NaN%",
            }
          }
        />
      </div>
      <div
        className="breakdowns"
      >
        <button
          className="btn btn-outline-secondary btn-sm"
          disabled={false}
          name="two"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          Two stars: 
          0
        </button>
      </div>
      <div
        className="progress"
      >
        <div
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={NaN}
          className="progress-bar bg-success"
          role="progressbar"
          style={
            Object {
              "width": "NaN%",
            }
          }
        />
      </div>
      <div
        className="breakdowns"
      >
        <button
          className="btn btn-outline-secondary btn-sm"
          disabled={false}
          name="one"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          One star: 
          0
        </button>
      </div>
      <div
        className="progress"
      >
        <div
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={NaN}
          className="progress-bar bg-success"
          role="progressbar"
          style={
            Object {
              "width": "NaN%",
            }
          }
        />
      </div>
    </div>
    <br />
  </div>
</div>
`;

exports[`<RatingBreakdown /> should correctly render total reviews 1`] = `
<div
  className="card"
>
  <div
    className="card-title h5"
  >
    <div
      className="hstack gap-3"
    >
      <div
        className="average-review-header"
      >
        0.0
      </div>
      <span
        style={
          Object {
            "direction": "ltr",
            "display": "inline-block",
            "touchAction": "none",
          }
        }
      >
        <span
          aria-hidden="true"
          className="react-simple-star-rating"
          style={
            Object {
              "cursor": "",
              "display": "inline-block",
              "overflow": "hidden",
              "position": "relative",
              "userSelect": "none",
              "verticalAlign": "middle",
              "whiteSpace": "nowrap",
            }
          }
        >
          <span
            className="empty-icons"
            style={
              Object {
                "color": "#cccccc",
                "display": "inline-block",
              }
            }
          >
            <svg
              className="star-svg"
              fill="currentColor"
              height={35}
              style={Object {}}
              viewBox="0 0 24 24"
              width={35}
            >
              <path
                d="M12,17.27L18.18,21l-1.64-7.03L22,9.24l-7.19-0.61L12,2L9.19,8.63L2,9.24l5.46,4.73L5.82,21L12,17.27z"
                fill="currentColor"
                stroke="none"
                strokeMiterlimit="10"
                strokeWidth={0}
              />
            </svg>
            <svg
              className="star-svg"
              fill="currentColor"
              height={35}
              style={Object {}}
              viewBox="0 0 24 24"
              width={35}
            >
              <path
                d="M12,17.27L18.18,21l-1.64-7.03L22,9.24l-7.19-0.61L12,2L9.19,8.63L2,9.24l5.46,4.73L5.82,21L12,17.27z"
                fill="currentColor"
                stroke="none"
                strokeMiterlimit="10"
                strokeWidth={0}
              />
            </svg>
            <svg
              className="star-svg"
              fill="currentColor"
              height={35}
              style={Object {}}
              viewBox="0 0 24 24"
              width={35}
            >
              <path
                d="M12,17.27L18.18,21l-1.64-7.03L22,9.24l-7.19-0.61L12,2L9.19,8.63L2,9.24l5.46,4.73L5.82,21L12,17.27z"
                fill="currentColor"
                stroke="none"
                strokeMiterlimit="10"
                strokeWidth={0}
              />
            </svg>
            <svg
              className="star-svg"
              fill="currentColor"
              height={35}
              style={Object {}}
              viewBox="0 0 24 24"
              width={35}
            >
              <path
                d="M12,17.27L18.18,21l-1.64-7.03L22,9.24l-7.19-0.61L12,2L9.19,8.63L2,9.24l5.46,4.73L5.82,21L12,17.27z"
                fill="currentColor"
                stroke="none"
                strokeMiterlimit="10"
                strokeWidth={0}
              />
            </svg>
            <svg
              className="star-svg"
              fill="currentColor"
              height={35}
              style={Object {}}
              viewBox="0 0 24 24"
              width={35}
            >
              <path
                d="M12,17.27L18.18,21l-1.64-7.03L22,9.24l-7.19-0.61L12,2L9.19,8.63L2,9.24l5.46,4.73L5.82,21L12,17.27z"
                fill="currentColor"
                stroke="none"
                strokeMiterlimit="10"
                strokeWidth={0}
              />
            </svg>
          </span>
          <span
            className="filled-icons"
            style={
              Object {
                "color": "#ffbc0b",
                "display": "inline-block",
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "top": 0,
                "transition": "",
                "whiteSpace": "nowrap",
                "width": "0%",
              }
            }
            title="0 out of 5"
          >
            <svg
              className="star-svg"
              fill="currentColor"
              height={35}
              style={Object {}}
              viewBox="0 0 24 24"
              width={35}
            >
              <path
                d="M12,17.27L18.18,21l-1.64-7.03L22,9.24l-7.19-0.61L12,2L9.19,8.63L2,9.24l5.46,4.73L5.82,21L12,17.27z"
                fill="currentColor"
                stroke="none"
                strokeMiterlimit="10"
                strokeWidth={0}
              />
            </svg>
            <svg
              className="star-svg"
              fill="currentColor"
              height={35}
              style={Object {}}
              viewBox="0 0 24 24"
              width={35}
            >
              <path
                d="M12,17.27L18.18,21l-1.64-7.03L22,9.24l-7.19-0.61L12,2L9.19,8.63L2,9.24l5.46,4.73L5.82,21L12,17.27z"
                fill="currentColor"
                stroke="none"
                strokeMiterlimit="10"
                strokeWidth={0}
              />
            </svg>
            <svg
              className="star-svg"
              fill="currentColor"
              height={35}
              style={Object {}}
              viewBox="0 0 24 24"
              width={35}
            >
              <path
                d="M12,17.27L18.18,21l-1.64-7.03L22,9.24l-7.19-0.61L12,2L9.19,8.63L2,9.24l5.46,4.73L5.82,21L12,17.27z"
                fill="currentColor"
                stroke="none"
                strokeMiterlimit="10"
                strokeWidth={0}
              />
            </svg>
            <svg
              className="star-svg"
              fill="currentColor"
              height={35}
              style={Object {}}
              viewBox="0 0 24 24"
              width={35}
            >
              <path
                d="M12,17.27L18.18,21l-1.64-7.03L22,9.24l-7.19-0.61L12,2L9.19,8.63L2,9.24l5.46,4.73L5.82,21L12,17.27z"
                fill="currentColor"
                stroke="none"
                strokeMiterlimit="10"
                strokeWidth={0}
              />
            </svg>
            <svg
              className="star-svg"
              fill="currentColor"
              height={35}
              style={Object {}}
              viewBox="0 0 24 24"
              width={35}
            >
              <path
                d="M12,17.27L18.18,21l-1.64-7.03L22,9.24l-7.19-0.61L12,2L9.19,8.63L2,9.24l5.46,4.73L5.82,21L12,17.27z"
                fill="currentColor"
                stroke="none"
                strokeMiterlimit="10"
                strokeWidth={0}
              />
            </svg>
          </span>
        </span>
      </span>
    </div>
    <h5
      className="total-ratings-header"
    >
       ratings
    </h5>
  </div>
  <div
    className="card-body"
  >
    <div
      className="spinner-border"
      role="status"
    >
      <span
        className="visually-hidden"
      >
        Loading...
      </span>
    </div>
  </div>
</div>
`;
